--- a/Index.html
+++ b/Index.html
@@ -13,27 +13,27 @@
   </head>
   <body><div class="card" style="width: 18rem;">
      <div class="card-body">
-       <h5 class="card-title">Employee Name:lkjg</h5>
+       <h5 class="card-title">Employee Name:test</h5>
        <h5 class="card-title">Designation:Engineer</h5>
-       <p class="card-text">Employee ID: alskdjg</p>
+       <p class="card-text">Employee ID: 1</p>
        <a href="https://github.com/undefined" class="btn btn-primary">github</a>
-       <a href="mailto:lkajsg" class="btn btn-primary">Email</a>
+       <a href="mailto:test@test.com" class="btn btn-primary">Email</a>
      </div>
    </div><div class="card" style="width: 18rem;">
      <div class="card-body">
-       <h5 class="card-title">Employee Name:asdf</h5>
+       <h5 class="card-title">Employee Name:test</h5>
        <h5 class="card-title">Designation:Manager</h5>
-       <p class="card-text">Employee ID: asdf</p>
-       <p class="btn btn-primary">undefined</p>
-       <a href="mailto:asf" class="btn btn-primary">Email</a>
+       <p class="card-text">Employee ID: 3</p>
+       <p class="btn btn-primary">OfficeNumber: undefined</p>
+       <a href="mailto:test@test.com" class="btn btn-primary">Email me</a>
      </div>
    </div><div class="card" style="width: 18rem;">
      <div class="card-body">
-       <h5 class="card-title">Employee Name:a;ksjdg</h5>
+       <h5 class="card-title">Employee Name:test</h5>
        <h5 class="card-title">Designation:Intern</h5>
-       <p class="card-text">Employee ID: ;aksjdg</p>
-       <p class="card-title">asdf</p>
-       <a href="mailto:adsf" class="btn btn-primary">Email</a>
+       <p class="card-text">Employee ID: 2</p>
+       <p class="card-title">School:test</p>
+       <a href="mailto:test@test.com" class="btn btn-primary">Email me</a>
      </div>
    </div>
  
