--- a/Index.html
+++ b/Index.html
@@ -25,15 +25,15 @@
        <h5 class="card-title">Designation:Manager</h5>
        <p class="card-text">Employee ID: 3</p>
        <p class="btn btn-primary">OfficeNumber: undefined</p>
-       <a href="mailto:test@test.com" class="btn btn-primary">Email me</a>
+       <a href="mailto:tesst@test.com" class="btn btn-primary">Email me</a>
      </div>
    </div><div class="card" style="width: 18rem;">
      <div class="card-body">
        <h5 class="card-title">Employee Name:test</h5>
        <h5 class="card-title">Designation:Intern</h5>
        <p class="card-text">Employee ID: 2</p>
-       <p class="card-title">School:test</p>
-       <a href="mailto:test@test.com" class="btn btn-primary">Email me</a>
+       <p class="card-title">School:test school</p>
+       <a href="mailto:test@test1.com" class="btn btn-primary">Email me</a>
      </div>
    </div>
  
